bug fix: db item without location, bug: overlapping icons

--- a/styles/map.css
+++ b/styles/map.css
@@ -11,6 +11,8 @@
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
+  width: 30px;
+  height: 30px;
 }
 
 .marker:hover {
